# data-plane-api

./: .bazelrc  .gitignore  BAZEL.md  MODULE.bazel  README.md  WORKSPACE  buf.yaml
.circleci/: config.yml
bazel/: api_build_system.bzl  deps.bzl  extensions.bzl  repositories.bzl  repository_locations.bzl
ci/: build_setup.sh  do_ci.sh
tools/: generate_listeners_test.py  tap2pcap.py  tap2pcap_test.py
